k8s/ingress.gras.backend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: backend.grascannabis.org
      http:
        paths:
          - path: /main(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gras-service-server-main
                port:
                  number: 80
          - path: /dispatch
            pathType: ImplementationSpecific
            backend:
              service:
                name: gras-service-server-dispatch
                port:
                  number: 80
